@@ -42,48 +42,48 @@ qt5_dep = dependency('qt5', modules : ['Core', 'Gui', 'Widgets', 'Network', 'Qml
 qt5 = import('qt5') 
 
 
-tea_headers = [
-    'minizip_crypt.h',
-        'ioapi.h',
-        'JlCompress.h',
-        'quaadler32.h',
-        'quachecksum32.h',
-        'quacrc32.h',
+tea_headers_moc = [
+ #   'minizip_crypt.h',
+#        'ioapi.h',
+   #     'JlCompress.h',
+   #     'quaadler32.h',
+#'quachecksum32.h',
+#      'quacrc32.h',
         'quagzipfile.h',
         'quaziodevice.h',
-        'quazipdir.h',
+  #      'quazipdir.h',
         'quazipfile.h',
-        'quazipfileinfo.h',
-        'quazip_global.h',
-        'quazip.h',
-        'quazipnewinfo.h',
-        'unzip.h',
-        'zip.h',
+   #     'quazipfileinfo.h',
+   #     'quazip_global.h',
+  #      'quazip.h',
+   #     'quazipnewinfo.h',
+   #'unzip.h',
+   #     'zip.h',
         'rvln.h',
     'todo.h',
     'document.h',
-    'utils.h',
-    'textproc.h',
+  #  'utils.h',
+#    'textproc.h',
     'calendar.h',
-    'libretta_calc.h',
-    'spellchecker.h',
+    #'libretta_calc.h',
+ #   'spellchecker.h',
     'fman.h',
     'shortcuts.h',
     'logmemo.h',
     'img_viewer.h',
-    'gui_utils.h',
-    'wavinfo.h',
+#    'gui_utils.h',
+ #   'wavinfo.h',
     'tio.h',
     'fontbox.h',
     'tzipper.h',
     'single_application.h',
     'single_application_shared.h',
-    'exif.h',
+ #   'exif.h',
     'myjoystick.h']
 
 
 src_processed = qt5.preprocess(
-  moc_headers : tea_headers,
+  moc_headers : tea_headers_moc,
    moc_extra_arguments: moc_params,
   qresources  : 'rvln.qrc'
 )
